--- a/src/app/components/withdrawal/withdrawal.component.html
+++ b/src/app/components/withdrawal/withdrawal.component.html
@@ -1,23 +1,45 @@
-<div class="submit-form">
-  <div *ngIf="!submitted">
-    <div class="form-group">
-      <label for="amount">Withdraw amount</label>
-      <input
-        type="text"
-        class="form-control"
-        id="amount"
-        required
-        [(ngModel)]="amount"
-        name="amount"
-      />
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mx-auto">
+      <div class="card">
+        <div class="card-header">
+          <h3>Withdraw Form</h3>
+        </div>
+
+        <div class="card-body" >
+          <form class="form" [formGroup]="withdrawForm" (ngSubmit)="onSubmit()" *ngIf="!gtg" >
+            <div>
+              <h5>Current balance : {{ currentAccount.balance}}</h5>
+            </div>
+            <div class="form-group">
+              <label>Amount to withdraw</label>
+              <input type="number" class="form-control" formControlName="withdrawalAmount">
+              <span class="text-danger"
+                    *ngIf="(withdrawFormControl.withdrawalAmount.touched || submitted) && withdrawFormControl.withdrawalAmount.errors?.required">
+                                amount is required
+                            </span>
+              <span class="text-danger"
+                    *ngIf="(withdrawFormControl.withdrawalAmount.touched || submitted) && withdrawForm.get('withdrawalAmount').hasError('invalidNumber')">
+                                amount is required
+                            </span>
+              <span class="text-danger"
+                    *ngIf="(withdrawFormControl.withdrawalAmount.touched || submitted) && withdrawFormControl.withdrawalAmount.errors.min">
+                                amount too small
+                            </span>
+            </div>
+
+
+            <div class="form-group">
+              <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+
+          </form>
+          <div *ngIf="gtg">
+            <h5> Withdrawal successful! </h5>
+            <button (click)="goBack()" class="btn btn-success">Go Back</button>
+          </div>
+        </div>
+      </div>
     </div>
-
-
-    <button (click)="updateBalance(amount)" class="btn btn-success">Submit</button>
-  </div>
-
-  <div *ngIf="submitted">
-    <h4>You submitted successfully!</h4>
-    <button (click)="goBack()" class="btn btn-success">Go Back</button>
   </div>
 </div>
