--- a/src/app/components/transaction-details/transaction-details.component.html
+++ b/src/app/components/transaction-details/transaction-details.component.html
@@ -25,7 +25,7 @@
       </div>
       <div>
         <label><strong>Date:</strong></label>
-        {{ currentTransaction.date }}
+        {{ currentTransaction.date | date }}
       </div>
       <div>
         <label><strong>Amount:</strong></label>
